--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,47 @@ body {
 }
 
 /* image dimesion */
-.color-image {
+.image {
       width: 420px;
       height: 420px;
     }
+
+/* image hover */
+.container{
+    position: relative;
+    width: 50%;
+}
+
+.color-image{
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.middle{
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%,-50%)
+}
+
+.container:hover.color-image{
+    opacity: 0.3;
+}
+
+.container:hover.middle{
+    opacity:1;
+}
+
+.text{
+    background-color: coral;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+}
