random values assigned to respective images when clicked

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,9 @@ body {
 }
 
 /* image dimesion */
-.image {
-      width: 420px;
-      height: 420px;
+.color-image {
+      width: 250px;
+      height: 250px;
     }
 
 /* image hover */
@@ -16,14 +16,14 @@ body {
     width: 50%;
 }
 
-.color-image{
+/* .color-image{
     opacity: 1;
     display: block;
     width: 100%;
     height: auto;
     transition: .5s ease;
     backface-visibility: hidden;
-}
+} */
 
 .middle{
     transition: .5s ease;
